--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "webpack-dev-server -d --hot --inline",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,29 @@
   "bugs": {
     "url": "https://github.com/KisaneNeko/testApp/issues"
   },
-  "homepage": "https://github.com/KisaneNeko/testApp#readme"
+  "homepage": "https://github.com/KisaneNeko/testApp#readme",
+  "devDependencies": {
+    "angular": "^1.5.8",
+    "angular-mocks": "^1.5.8",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-plugin-__coverage__": "^11.0.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.5.0",
+    "bootstrap": "^3.3.6",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
+    "jasmine": "^2.4.1",
+    "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "ng-annotate-loader": "^0.1.0",
+    "phantomjs-prebuilt": "^2.1.13",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
