--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "ng-annotate-loader": "^0.1.0",
+    "ng-cache-loader": "0.0.21",
     "phantomjs-prebuilt": "^2.1.13",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
