--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.5.0",
     "bootstrap": "^3.3.6",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "file-loader": "^0.9.0",
     "jasmine": "^2.4.1",
