--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
     "bootstrap": "^3.3.6",
+    "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.9.0",
     "jasmine": "^2.4.1",
@@ -44,7 +45,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "react": "^15.3.2",
